--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My Portfolio</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+    <!-- Tailwind Build Output -->
+    <link rel="stylesheet" href="./output.css" />
+</head>
+<body class="bg-gray-900 text-white">
+    <h1 class="text-4xl font-bold text-center mt-10">Welcome to My Portfolio</h1>
+
+    <div id="root" class="mt-10 text-center">
+        <p class="text-lg">This is my portfolio website!</p>
+    </div>
+</body>
 </html>
